--- a/wp-content/themes/understrap-child/sass/theme/partials/global_styles/navbar_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/global_styles/navbar_styles.scss
@@ -125,7 +125,7 @@ button:focus {
     text-transform: lowercase;
 
     @include media-breakpoint-up(lg) {
-        font-size: $ms-_25;
+        font-size: $ms-2_75;
     }
 }
 
