--- a/wp-content/themes/understrap-child/sass/theme/partials/global_styles/graphics_and_artwork_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/global_styles/graphics_and_artwork_styles.scss
@@ -132,6 +132,17 @@
 }
 
 
+.bgme {
+    background: none;
+
+    @include media-breakpoint-up(lg) {
+        background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2018/12/me.jpg");
+        background-position: right bottom;
+        background-size: 80%;
+        background-repeat: no-repeat;
+    }
+}
+
 .panel-hero__img--mobile.evo{
         width: 100%;
         height: auto;
@@ -162,6 +173,19 @@
     }
 }
 
+#fam-container{
+    width: 100%;
+}
+
+.brains{
+    width: 100%;
+    left: 5%;
+@include media-breakpoint-up(md) {
+    left: 15%;
+    width: 80%;
+}
+}
+
 //svg tweaks
 .stats .style-svg {
     height: $ms-6;
@@ -178,7 +202,7 @@
     // .style-svg, .cls-1, .cls-3, .cls-4 {
     //     max-width: $ms-10;
         fill: $tungsten;
-        width: 20%;
+        width: 50%;
     }
 
 
@@ -197,18 +221,33 @@
 
 .diagram {
     margin: $rvr-2 auto;
+    @include media-breakpoint-up(md) {
+        margin: $rvr-3 0;
+    }
 }
 
-.diagram__competitive-advantage{
-@extend .diagram;
+.diagram-content{
 }
+
+
 
 .competitive-advantage__svg{
     width: 100%;
+    @include media-breakpoint-up(md) {
+        width: 140%;
+    }
 }
 
 .diagram__modern-marketing{
     @extend .diagram;
+}
+
+.diagram__competitive-advantage{
+@extend .diagram;
+@include media-breakpoint-up(md) {
+        // margin-left: auto;
+        // margin-right: auto;
+    }
 }
 
 .diagram__end-to-end{}
@@ -308,11 +347,25 @@
     .cls-1 {
         fill: $secondary;
     }
+    @include media-breakpoint-up(md) {
+        li {
+            font-size: ms(4);
+        }
+    }
+}
+
+.diagram-content__end-to-end{
+    @include media-breakpoint-up(md) {
+
+    }
 }
 
 .diagram-content__end-to-end--vertical {
     @include make-row;
-
+@include make-col-ready();
+@include make-col(12);
+padding-left: 0px;
+padding-right: 0px;
     position: relative;
     margin-left: 0px;
     margin-right: 0px;
@@ -402,6 +455,11 @@
 }
 
 .categories__content_image{
-    width: 100%;
+    max-width: 100%;
+    height: auto;
+@include media-breakpoint-up(md) {
+    width: 150%;
+    height: 150%;
+}
 }
 
