--- a/wp-content/themes/understrap-child/sass/theme/partials/global_styles/layout_tweaks.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/global_styles/layout_tweaks.scss
@@ -19,6 +19,24 @@
     margin: 01 auto;
 }
 
+
+
+.container.business-value {
+    width: 300px;
+    max-width: 100%;
+    padding-left: 30px;
+    padding-right: 30px;
+    .row {
+        width: 100%;
+    }
+    a.link__advance--chevron{
+        margin-top: $rvr-6;
+    }
+@include media-breakpoint-up(md) {
+    width: 540px;
+}
+}
+
 .page__header {
     @include make-row;
 
@@ -51,7 +69,17 @@
         padding-right: 0px;
         margin-bottom: $rvr-1;
     }
+    @include media-breakpoint-up(md) {
+       h2{@include make-col(2);}
+       h3{@include make-col(10);
+        padding-left: $ms-3;
+    }
+        h4{
+            margin-top: $rvr-2;
+        }
+    }
 }
+
 
 .scroll-top {
     position: fixed;
@@ -77,6 +105,16 @@
     }
 }
 
+.about-me .panel-hero__img--mobile {
+left: 0;
+width: 70%;
+}
+
+.my-expertise .panel-hero__img--mobile{
+@include media-breakpoint-up(md){
+    left: 10%;
+}
+}
 // ARTICLE LAYOUTS
 
 .home-page__howidoit__container {
@@ -458,6 +496,7 @@ article.panel-fluid.home-page {
         margin-top: auto;
         margin-bottom: $rvr-3;
         flex: 0 1 auto;
+        padding-top: $rvr-8;
     }
 
     h1.br {
@@ -481,7 +520,17 @@ article.panel-fluid.home-page {
     .link__advance--chevron {
         margin-top: auto;
         flex: 0 0 0;
+        padding-bottom: $rvr-6;
     }
+}
+
+.why-me__container__splash a.link__advance--chevron{
+    margin-right: auto;
+    margin-left: 0;
+}
+.panel-fluid.about-me.backstory{
+    height: initial;
+    position: relative;
 }
 
 .my-value__splash__container {
@@ -531,12 +580,13 @@ article.panel-fluid.home-page {
 .my-expertise__main-page {
     @extend .container;
 
-    h1 {
+    h2 {
         @extend .headline;
     }
 
-    h2 {
+    h3 {
         @extend .display;
+        font-weight: 300;
     }
 
     display: flex;
@@ -546,9 +596,14 @@ article.panel-fluid.home-page {
 
     @include media-breakpoint-up(md) {
         height: 100vh;
+        padding-left: 0;
+        padding-right: 0;
+        text-align: center;
+h2{ max-width: ms(11); }
+h3{ max-width: ms(11.65);}
 
-        @include make-col-ready;
-        @include make-col(4);
+        // @include make-col-ready;
+        // @include make-col(4);
     }
 
 
@@ -557,7 +612,7 @@ article.panel-fluid.home-page {
     }
 }
 
-.expertise__mainpage_menu {
+.expertise__main-page_menu {
     @extend .row;
 
     margin-bottom: 0;
@@ -566,6 +621,11 @@ article.panel-fluid.home-page {
     justify-content: center;
     align-content: center;
     padding: 0;
+    width: 100%;
+    max-width: 100%;
+    @include media-breakpoint-up(md) {
+    margin-top: $rvr-3;
+    }
 }
 
 .expertise__menu_item {
@@ -577,21 +637,42 @@ article.panel-fluid.home-page {
     justify-content: center;
     margin-bottom: $rvr-2;
 
-    h1 {
+    h3 {
         @extend .subhead;
+        font-weight: 500;
 
         margin-bottom: $rvr-1;
         text-align: center;
         line-height: $rvr-1_5;
     }
 
-    p {}
+    p {
+    }
 
     @include make-col-ready;
     @include make-col(12);
 
     padding-left: 5px;
     padding-right: 5px;
+// @include media-breakpoint-up(md) {
+//     @include make-col-ready();
+//     @include make-col(4);
+//     padding-left: 0px;
+//     padding-right: 0px;
+// }
+@include media-breakpoint-up(md) {
+h3{
+    font-size: ms(3.5);
+    line-height: $rvr-1_75;
+}
+p{
+    max-width: ms(10);
+}
+@include make-col-ready();
+@include make-col(6);
+padding-left: 0px;
+padding-right: 0px;
+}
 }
 
 .expertise__overlay {
@@ -608,8 +689,8 @@ article.panel-fluid.home-page {
 //     }
 
 .overlay__container {
+    @extend .container;
     @extend .row;
-
     padding: $ms-8 $ms-4;
     justify-content: left;
 
@@ -620,6 +701,11 @@ article.panel-fluid.home-page {
      p:last-of-type{
         margin-bottom: $rvr-2;
     }
+@include media-breakpoint-up(md) {
+    h2{
+    margin-bottom: $rvr-3;
+    }
+}
 }
 
 .overlay__content {
@@ -684,9 +770,9 @@ article.panel-fluid.home-page {
     width: 100%;
 
     // height: 120vh;
-    background: rgba(0, 0, 0, 0.92);
+//     background: rgba(0, 0, 0, 0.92);
     z-index: 9999;
-
+background: rgba(59,68,76,.99);
     // We hide the overlay by default */
     visibility: hidden;
     opacity: 0;
@@ -744,7 +830,7 @@ height: 100vh;
 
     h3 {
         flex: 0 1 auto;
-        margin-bottom: $rvr-2;
+        margin-bottom: $rvr-3;
         text-align: center;
         width: 90%;
     }
@@ -756,8 +842,14 @@ height: 100vh;
     .overlay__content {
         justify-content: center;
         margin-bottom: $rvr-4;
+        @include make-col-ready();
+        @include make-col(12);
+        padding-left: 0px;
+        padding-right: 0px;
     }
-
+@include media-breakpoint-up(md) {
+p{ max-width: ms(11.25); }
+}
     // overflow: hidden;
     // display: flex;
     // align-items: center;
@@ -773,6 +865,7 @@ height: 100vh;
     order: 6;
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     @include media-breakpoint-up(lg) {
         order: 5;
@@ -802,6 +895,19 @@ height: 100vh;
     justify-content: center;
 }
 
+.alternate{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+
+   a.link__advance--chevron {
+        order: 100;
+        margin: $rvr-6 auto;
+    }
+}
+
+
+
 .why-me__brands {
     h1 {
         @extend .page__title;
@@ -823,11 +929,24 @@ height: 100vh;
     padding: 0;
 
     @include media-breakpoint-up(md) {
-        @include make-col(8);
+        @include make-col(11);
+        margin-top: $rvr-4;
+        justify-content: space-between;
     }
 }
 
-.why-me__brands_logo {}
+.why-me__brands--logo {
+    // width: $ms-7_75;
+    // padding: $ms-2 $ms-2_5;
+@include make-col-ready();
+@include make-col(4);
+padding-left: 8px;
+padding-right: 8px;
+@include media-breakpoint-up(md) {
+flex: 0 0 28%;
+max-width: 28%;
+}
+}
 
 .why-me__brands {
     display: flex;
@@ -843,14 +962,9 @@ height: 100vh;
     flex-direction: row;
 }
 
-.panel-fluid.alternate.why-me__categories {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-
-    a.link__advance--chevron {
-        order: 100;
-    }
+.why-me__container__categories{
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .why-me__categories_content {
@@ -981,4 +1095,92 @@ height: 100vh;
         margin-left: auto;
         margin-right: auto;
     }
+        @include media-breakpoint-up(md) {
+        h3 {
+         
+            margin-bottom: $rvr-1;
+        }
+
+        p {
+            // font-size: $ms-3_5;
+        }
+    }
 }
+
+
+
+.about-me__container__backstory{
+    // padding-left: 0;
+    // padding-right: 0;
+
+}
+
+
+.tldr{
+    border: ms(-2) solid $gray-400;
+    color: #111;
+    width: ms(9.8);
+    margin: $rvr-2 0;
+    border-radius: 1rem;
+}
+
+.tldr h4{
+    font-family: $font-family-monospace;
+    font-weight:800;
+    background-color: #fff;
+    margin-left: $ms-1;
+    margin-top: -1.33rem;
+    margin-bottom: 0;
+    padding: 0 $ms-1;
+    font-size: $ms-2;
+    letter-spacing: .2rem;
+    width: ms(6);
+
+}
+
+.tldr ul{
+text-indent: 0;
+padding-left: $ms-3;
+list-style: none;
+font-size: $ms-2_75;
+max-width: ms(9.5);
+}
+
+.tldr li{
+padding: $ms-_25 $ms-1;
+font-weight: 300;
+}
+
+.tldr ul li::before{
+color: $slate;
+content: "\2022"; 
+display: inline-block;
+width: 1rem;
+margin-left: -1rem;
+}
+// #backstory__content{
+//     max-height: 60vh;
+//     position: relative;
+//     overflow:hidden;
+//     // padding-left: 0;
+//     // padding-right: 0;
+
+// }
+
+// #backstory__content .read-more{
+// position: absolute; 
+//   bottom: 0; 
+//   left: 0;
+//   width: 100%; 
+//   text-align: center; 
+//   margin: 0; 
+//   padding: 20vh 0; 
+    
+//   /* "transparent" only works here because == rgba(0,0,0,0) */
+// background-image: -webkit-gradient(
+//   linear,
+//   left top,
+//   left bottom,
+//   color-stop(0, rgba(255, 255, 255, .8)),
+//   color-stop(1, rgba(255, 255, 255, 100)));
+// }
