--- a/wp-content/themes/understrap-child/sass/theme/partials/global_styles/graphics_and_artwork_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/global_styles/graphics_and_artwork_styles.scss
@@ -60,10 +60,24 @@
 }
 
 
-.bgbrains {
+// .bgbrains {
+//     background: none;
+
+//  @media (min-width: 992px) {
+//         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/brains.jpg");
+//         background-position: right bottom;
+//         background-size: 50%;
+//         background-repeat: no-repeat;
+//     }
+//     @media (min-width: 1200px){
+//         background: none;
+//     }
+// }
+
+.bgbrainsv2 {
     background: none;
 
- @media (min-width: 1200px) {
+ @media (min-width:992px) {
         background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/brains.jpg");
         background-position: right bottom;
         background-size: 50%;
@@ -75,7 +89,7 @@
     background: none;
 
  @media (min-width: 1200px) {
-        background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2018/12/evolution.jpg");
+        background-image: url("http://jamiejohnsonmev2.test/wp-content/uploads/2019/01/evolutionv2.jpg");
         background-position: right bottom;
         background-size: 80%;
         background-repeat: no-repeat;
@@ -207,8 +221,10 @@
     width: 100%;
     left: 5%;
 @include media-breakpoint-up(md) {
-    left: 15%;
+    bottom: 0;
+    left: 20%;
     width: 80%;
+    position: fixed;
 }
 }
 
@@ -373,11 +389,6 @@
     .cls-1 {
         fill: $secondary;
     }
-    @include media-breakpoint-up(md) {
-        li {
-            font-size: ms(4);
-        }
-    }
 }
 
 .diagram-content__end-to-end{
@@ -478,12 +489,29 @@ padding-right: 0px;
 .delta--horz {
     margin: $rvr-1 auto;
     width: $ms-3;
-}
+    .cls-1{
+        fill: $slate;
+    }
+    @media (min-width: 786px){
+        margin: $rvr-_25 auto;
+        }
+    }
 
-.categories__content_image{
-    max-width: 100%;
+
+img.categories__content_image {
     width: 100%;
-    height: auto;
+    height: 100%;
+    overflow: hidden;
+
+    @media (min-width: 300px) {}
+    
+    
+    @media (min-width: 400px) {}
+    
+    
+    @media (min-width: 576px) {}
+
+    
  @media (min-width: 768px) {
     width: 150%;
     height: 150%;
