--- a/wp-content/themes/understrap-child/sass/theme/partials/global_styles/state_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/global_styles/state_styles.scss
@@ -25,34 +25,92 @@
 
 
 .diagram-content__end-to-end--horizontal{
+	   
 	   display: none;
-	    @include media-breakpoint-up(sm) {
-	    	display: none;
-	}
-	    @include media-breakpoint-up(md) {
-	  	display: none;
-	  }
-	    @include media-breakpoint-up(lg) {
-			display: block;
-		}
-	    @include media-breakpoint-up(xl) {
-	}
+	   @media (min-width: 300px) {}
+	   
+	   
+	   @media (min-width: 400px) {}
+	   
+	   
+	   @media (min-width: 576px) {}
+	   
+	   
+	   @media (min-width: 768px) {}
+	   
+	   
+	   @media (min-width: 992px) {
+	   		display: block;
+	   }
+	   
+	   
+	   @media (min-width: 1200px) {}
+	   
+	   
+	   @media (min-width: 1400px) {}
+	   
+	   
+	   @media (min-width: 1600px) {}
+	   
+	   @media (min-width: 1900px) {}
+	   }
+
+
+// 	    @include media-breakpoint-up(sm) {
+// 	    	display: none;
+// 	}
+// 	    @include media-breakpoint-up(md) {
+// 	  	display: none;
+// 	  }
+// 	    @include media-breakpoint-up(lg) {
+// 			display: block;
+// 		}
+// 	    @include media-breakpoint-up(xl) {
+// 	}
 	
-}
+// }
 
 .diagram-content__end-to-end--vertical{
-	    @include media-breakpoint-up(sm) {
+	 display: flex;
+	 @media (min-width: 300px) {}
+	 
+	 
+	 @media (min-width: 400px) {}
+	 
+	 
+	 @media (min-width: 576px) {}
+	 
+	 
+	 @media (min-width: 768px) {}
+	 
+	 
+	 @media (min-width: 992px) {
+	 	   		display: none;
+	 }
+	 
+	 
+	 @media (min-width: 1200px) {}
+	 
+	 
+	 @media (min-width: 1400px) {}
+	 
+	 
+	 @media (min-width: 1600px) {}
+	 
+	 @media (min-width: 1900px) {}
+}	 
+	//     @include media-breakpoint-up(sm) {
 	    	
-	}
-	    @include media-breakpoint-up(md) {
-	}    
-	    @include media-breakpoint-up(lg) {
-			display: none;
-		}
-	    @include media-breakpoint-up(xl) {
-	}
+	// }
+	//     @include media-breakpoint-up(md) {
+	// }    
+	//     @include media-breakpoint-up(lg) {
+	// 		display: none;
+	// 	}
+	//     @include media-breakpoint-up(xl) {
+	// }
 	
-}
+
 
 
 .panel.home-page.splash .hide{
