--- a/wp-content/themes/understrap-child/sass/theme/partials/section_styles/panel_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/section_styles/panel_styles.scss
@@ -238,7 +238,7 @@ text-transform: capitalize;
 }
 
 #main > section > article:nth-child(3) > div > div > hgroup > h3{
-  font-size: ms(3.7);
+//   font-size: ms(3.7);
   .br{
     display: none;
   }
@@ -657,6 +657,11 @@ p+p{
 .panel-fluid.why-me{
   padding-left: 0;
   padding-right: 0;
+
+}
+
+.panel-fluid.why-me.cta{
+    background: #fff;
 }
 
 .container.splash.why-me__splash{
@@ -669,10 +674,6 @@ p+p{
     text-align: left;
 }
 
-.atypical__background{
-    background: $slate-shade-100;
-    padding: $ms-6 $ms-6;
-}
 
 .why-me__container__atypical {
    display: flex;
@@ -688,18 +689,19 @@ p+p{
     h3 {
         @extend .display;
         text-transform: uppercase;
+        letter-spacing: .05rem;
 //         font-size: $h4-font-size;
-        margin-bottom: $rvr-2;
+    
         line-height: $rvr-1;
     }
     h4 {
     @extend .subhead;
 
-    font-size: ms(3.75);
-    font-weight: 200;
-    margin-bottom: $rvr-1_5;
+    font-size: ms(3);
+    font-weight: 400;
+    
     line-height: $rvr-1_5;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     letter-spacing: .05rem;
 }
 
@@ -707,14 +709,17 @@ p+p{
         @extend .display;
    font-weight: 200;
         font-size: $display-3-font-size;
-        margin-bottom: $rvr-1;
+      
     }
 
-    p {
-        font-family: $font-family-sans-serif;
-        margin-bottom: $rvr-1;
-           font-weight: 200;
+
+p {
+    @extend .display;
+    font-size: ms(2.75);
+    line-height: $rvr-2;
+    // line-height: $rvr-2;
     }
+
 @include media-breakpoint-up(md) {
     h4{
     font-weight: 500;
@@ -730,98 +735,185 @@ p{
 }
 }
 
-
-
-
-.why-me__content:nth-of-type(1){ 
-    h4 {
-    margin-bottom: 0;
-}
-}
-
-
-
-
-.why-me__content:nth-of-type(2),
-.why-me__content:nth-of-type(4), 
-.why-me__content:nth-of-type(6){
-    background: $primary;
+    .why-me__content__copy{
+border: thin solid #111;
+border-radius: 1rem;
+padding: ms(6.5) ms(4);
+h4{
+    border-radius: 1rem;
+    padding: $ms-2 $ms-4;
+    border: ms(-3) solid #fff;
+    text-transform: uppercase;
+    letter-spacing: .075rem;
     color: #fff;
-    padding: $ms-10 $ms-4;
-    position: relative;
+    }
+ h4:before{
+     content: '';
+    position: absolute;
+    top: 6px;
+    left: 0;
+    height: 100%;
+    width: 10%;
+    background: #535f6b;
+    -webkit-transform: skew(0deg,6deg);
+    transform: skew(0deg,6deg);
+    }
+p{
+    color: #fff;
+}
 }
 
-.why-me__content:nth-of-type(3),
-.why-me__content:nth-of-type(5),
-.why-me__content:nth-of-type(7){
-    background: $tungsten;
-    color: #111;
-    padding: $ms-10 $ms-4;
-    margin-top: -2rem;
-    margin-bottom: -2rem;
-    position: relative;
+
+
+#why-me__content__copy--1, #why-me__content__copy--3, #why-me__content__copy--5{ 
+    &, 
+    & h4,
+    &, 
+    & h4:before{
+    background: $slate-shade-300;
+}
+}
+
+#why-me__content__copy--5 h4:before, #why-me__content__copy--6 h4:before{
+    width: 6%;
+}
+
+#why-me__content__copy--2, #why-me__content__copy--4, #why-me__content__copy--6{ 
+    &, 
+    & h4,
+    &, 
+    & h4:before{
+    background: $slate-shade-600;
+}
 }
 
 
-.why-me__content:nth-of-type(2){
-    z-index: 0;
-    margin-left: $ms-2;
-    width: ms(10.65);
-    // p{
-    //     max-width: ms(9.8);
-    // }
-    margin-bottom: .25rem;
-}
-
-.why-me__content:nth-of-type(3){
-    margin-left: -5rem;
-    margin-top: -4rem;
-    z-index: 1;
-       width: ms(10.65);
-    // p{
-    //       max-width: ms(9.8);
-    // }
-}
-
-.why-me__content:nth-of-type(4){
-    margin-left: -.5rem;
-    margin-top: -5.5rem;
-    // padding: 9rem;
-    z-index: 1;
-         width: ms(10.5);
-    // p{max-width: ms(10.25);}
-}
-
-.why-me__content:nth-of-type(5){
-    margin-left: -5rem;
-    z-index: 2;
-        margin-top: -2rem;
-    margin-bottom: -2rem;
-       width: ms(10.55);
-}
-
-.why-me__content:nth-of-type(6){
-    margin-left: $ms-3;
-    z-index: 3;
-         width: ms(10.75);
-}
-
-// .why-me__content:nth-of-type(6){
-//     margin-left: $ms-4;
-//     margin-top: -3rem;
-//     z-index: 1;
+// #why-me__content__copy--2, #why-me__content__copy--2 h4{
+//     background: $slate-shade-600;
+// }
+// #why-me__content__copy--3, #why-me__content__copy--3 h4{
+//     background: $slate-shade-300;
+// }
+// #why-me__content__copy--4, #why-me__content__copy--4 h4{
+//     background: $slate-shade-600;
+// }
+// #why-me__content__copy--5, #why-me__content__copy--5 h4{
+//     background: $slate-shade-300;
+// }
+// #why-me__content__copy--6, #why-me__content__copy--6 h4{
+//     background: $slate-shade-600;
 // }
 
-.why-me__content:nth-of-type(7){
-    z-index: 4;
-    margin-left: -($ms-6);
-         width: ms(10.55);
+
+
+.atypical__intro{
+   p{
+    @extend .body;
+    font-size: $body-4-font-size;
+    line-height: $rvr-2_25;
+} // background: $slate-shade-100;
+    // padding: $ms-6 $ms-6;
 }
 
-.why-me__content{
-    height: ms(10.5);
-    width: ms(11.5);
-}
+
+// .why-me__content:nth-of-type(1){ 
+//     h4 {
+//     margin-bottom: 0;
+// }
+// }
+
+
+
+
+// .why-me__content:nth-of-type(2),
+// .why-me__content:nth-of-type(4), 
+// .why-me__content:nth-of-type(6){
+//     background: $primary;
+//     color: #fff;
+//     padding: $ms-10 $ms-4;
+//     position: relative;
+// }
+
+// .why-me__content:nth-of-type(3),
+// .why-me__content:nth-of-type(5),
+// .why-me__content:nth-of-type(7){
+//     background: $tungsten;
+//     color: #111;
+//     padding: $ms-10 $ms-4;
+//     margin-top: -2rem;
+//     margin-bottom: -2rem;
+//     position: relative;
+// }
+
+
+// .why-me__content:nth-of-type(2){
+//     z-index: 0;
+//     margin-left: $ms-2;
+//     width: ms(10.65);
+//     // p{
+//     //     max-width: ms(9.8);
+//     // }
+//     margin-bottom: .25rem;
+// }
+
+// .why-me__content:nth-of-type(3){
+//     margin-left: -5rem;
+//     margin-top: -4rem;
+//     z-index: 1;
+//        width: ms(10.65);
+//     // p{
+//     //       max-width: ms(9.8);
+//     // }
+// }
+
+// .why-me__content:nth-of-type(4){
+//     margin-left: -.5rem;
+//     margin-top: -5.5rem;
+//     // padding: 9rem;
+//     z-index: 1;
+//          width: ms(10.5);
+//     // p{max-width: ms(10.25);}
+// }
+
+// .why-me__content:nth-of-type(5){
+//     margin-left: -5rem;
+//     z-index: 2;
+//         margin-top: -2rem;
+//     margin-bottom: -2rem;
+//        width: ms(10.55);
+// }
+
+// .why-me__content:nth-of-type(6){
+//     margin-left: $ms-3;
+//     z-index: 3;
+//          width: ms(10.75);
+// }
+
+// // .why-me__content:nth-of-type(6){
+// //     margin-left: $ms-4;
+// //     margin-top: -3rem;
+// //     z-index: 1;
+// // }
+
+// .why-me__content:nth-of-type(7){
+//     z-index: 4;
+//     margin-left: -($ms-6);
+//          width: ms(10.55);
+// }
+
+
+
+// @include media-breakpoint-up(md) {
+// .why-me__content:nth-of-type(2),
+// .why-me__content:nth-of-type(3),
+// .why-me__content:nth-of-type(4),
+// .why-me__content:nth-of-type(5),
+// .why-me__content:nth-of-type(6),
+// .why-me__content:nth-of-type(7){
+// width: ms(14);
+// }
+// }
+
 
 
 .why-me__content{
@@ -836,46 +928,47 @@ p{
     }
 }
 
+
 .why-me__content__copy{
-    margin: 0 auto;
-    max-width: ms(9.8);
-    @include media-breakpoint-up(md) {
-        max-width: ms(10.5);
-    }
+//     margin: 0 auto;
+//     max-width: ms(9.8);
+//     @include media-breakpoint-up(md) {
+//         max-width: ms(10.5);
+//     }
 }
 
-@include media-breakpoint-up(md) {
+// @include media-breakpoint-up(md) {
 
-.why-me__content:nth-of-type(2),
-.why-me__content:nth-of-type(4), 
-.why-me__content:nth-of-type(6){ 
-    .why-me__content__copy, {
-margin-left: $ms-6;
-margin-right: auto;
-}
-}
+// .why-me__content:nth-of-type(2),
+// .why-me__content:nth-of-type(4), 
+// .why-me__content:nth-of-type(6){ 
+//     .why-me__content__copy, {
+// margin-left: $ms-6;
+// margin-right: auto;
+// }
+// }
 
-.why-me__content:nth-of-type(3),
-.why-me__content:nth-of-type(5),
-.why-me__content:nth-of-type(7){
-.why-me__content__copy{
-    margin-right: $ms-6;
-margin-left: auto;
-max-width: ms(10.3);
-}
-}
-}
+// .why-me__content:nth-of-type(3),
+// .why-me__content:nth-of-type(5),
+// .why-me__content:nth-of-type(7){
+// .why-me__content__copy{
+//     margin-right: $ms-6;
+// margin-left: auto;
+// max-width: ms(10.3);
+// }
+// }
+// }
 
 
 
-@include media-breakpoint-up(md) {
-.why-me__content:nth-of-type(2){width: ms(13.75); margin-left: -8rem;}
-.why-me__content:nth-of-type(3){width: ms(12.45); margin-left: -17rem;}
-.why-me__content:nth-of-type(4){width: ms(13.95); margin-left: -10rem;}
-.why-me__content:nth-of-type(5){width: ms(12.45); margin-left: -17rem;}
-.why-me__content:nth-of-type(6){width: ms(13.65); margin-left: -8rem;}
-.why-me__content:nth-of-type(7){width: ms(12.45); margin-left: -16rem;}    
-}
+// @include media-breakpoint-up(md) {
+// .why-me__content:nth-of-type(2){width: ms(13.75); margin-left: -8rem;}
+// .why-me__content:nth-of-type(3){width: ms(12.45); margin-left: -17rem;}
+// .why-me__content:nth-of-type(4){width: ms(13.95); margin-left: -10rem;}
+// .why-me__content:nth-of-type(5){width: ms(12.45); margin-left: -17rem;}
+// .why-me__content:nth-of-type(6){width: ms(13.65); margin-left: -8rem;}
+// .why-me__content:nth-of-type(7){width: ms(12.45); margin-left: -16rem;}    
+// }
 
 
 // .why-me__content > div.row > div:nth-child(8) {
@@ -896,6 +989,10 @@ img#sponge-small {
 // .why-me__content {
 //     height: 30rem;
 // }
+
+.categories, .brands{
+    background: #fff;
+}
 
 .why-me__container__brands{
     @include media-breakpoint-up(md) {
